# SOLID_Principles

./: AStar.cpp  AStar.h  A_Star.cpp  BFS.cpp  BFS.h  BestFirstSearch.h  CMakeLists.txt  CacheManager.h  ClientHandler.h  DFS.cpp  DFS.h  DFSb.h  Entry.h  FileCacheManager.cpp  FileCacheManager.h  Graph.cpp  Graph.h  IO.cpp  IO.h  Main.h  MatrixGraph.cpp  MatrixGraph.h  MatrixTester.cpp  MatrixTester.h  MyClientHandler.cpp  MyClientHandler.h  MyParallelServer.cpp  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  README.md  Searchable.h  Searcher.h  SearcherSolver.h  Server.h  Solver.h  State.h  StringReverser.cpp  (+2 more)
